# q

./: .env.example  .gitignore  README.md  README_zh_tw.md  pyproject.toml
data/cache/: BTC_USDT_SWAP_funding.csv  BTC_USDT_ohlcv_1D.csv
docs/: architecture.md  deployment-guide.md  execution-assumptions.md  factor-spec.md  implementation-plan.md  portfolio-construction.md  research-plan.md  research-sources.md  risk.md  runbook.md  strategy-report.md  strategy.md  test-plan.md
scripts/: verify_okx_connection.py
src/okx_spot_demo_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/quantbot/: __init__.py  config.py  engine.py
src/quantbot/core/: models.py
tests/: conftest.py  test_adaptive_momentum.py  test_backtest_engine.py  test_config.py  test_cross_sectional_arb.py  test_crypto_factors.py  test_engine.py  test_enhanced_features.py  test_ensemble.py  test_execution_simulator.py  test_framework_audit.py  test_instruments.py  test_live_feasibility.py  test_live_risk.py  test_market_data.py  test_market_impact.py  test_markov_regime.py  test_mean_reversion_markov.py  test_metrics.py  test_microstructure_flow.py  test_multifactor_strategy.py  test_okx_auth.py  test_okx_rest_client.py  test_okx_trade_adapter.py  test_okx_ws.py  test_oos_backtest.py  test_orchestrator.py  test_order_state.py  test_persistence.py  test_portfolio_construction.py  test_reconciliation.py  test_regime.py  test_regime_switching.py  test_research_data.py  test_research_factors.py  test_research_metrics.py  test_risk.py  test_risk_overlay.py  test_robustness.py  test_stablecoin_hedge.py  (+6 more)
(+48 files in other folders)
